<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">琪坤工匠</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">返回</string>
    <string name="register_title_select_type">选择用户注册类型</string>
    <string name="register_craftman">工匠注册</string>
	<string name="register_user">用户注册</string>
	<string name="register_setpw">设置密码</string>
	<string name="register_next">下一步</string>
	<string name="login">登录</string>
	<string name="register">注册</string>
	<string name="register_pw_hint">设置新密码</string>
	<string name="register_pw_hint_re">重复新密码</string>
	<string name="register_setphone">填写手机号</string>
	<string name="forgetpw">忘记密码</string>
	<string name="register_phone_hint">输入手机号码</string>
	<string name="login_pw_hint">输入密码</string>
	<string name="bindphone_input">填写绑定手机号码</string>
	<string name="register_social">社交账号登录</string>
	<string name="register_identifyingcode">填写验证码</string>
	<string name="register_tip">已向手机0566245发送了一条短信验证码</string>
	<string name="register_retry">重新发送</string>
	<string name="register_identifyingcode_hint">输入短信验证码</string>
	<string name="register_invite_setphone">填写邀请人手机号</string>
	<string name="conform">确认</string>
	<string name="register_invite_no">没有邀请人，不填</string>
	<string name="address">地址</string>
	<string name="myaddress">我的地址</string>
	<string name="edit">编辑</string>
	<string name="personinfo">个人资料</string>
	<string name="headimg">头像</string>
	<string name="name">姓名</string>
	<string name="sex">性别</string>
	<string name="modifypw">修改密码</string>
	<string name="introduce">自我介绍</string>
	<string name="craftmancentre">工匠中心</string>
	<string name="balance">余额:</string>
	<string name="renew">账户续费</string>
	<string name="card">我的名片</string>
	<string name="name_authentication">实名认证</string>
	<string name="craftman_authentication">工匠认证</string>
	<string name="phone_bind">手机绑定/修改</string>
	<string name="wallet">钱包</string>
	<string name="mycard">我的银行卡</string>
	<string name="collect">我的收藏</string>  
	<string name="connect">联系客服</string>
	<string name="serviceNumber">400-0264-602</string>
	<string name="quit">退出登录</string>
	<string name="bindsuccess">绑定成功</string>
	<string name="bindsuccess_tip">恭喜你，成功绑定手机号码</string>
	<string name="backtohomepage">返回首页</string>
	<string name="register_code_hint">输入验证码</string>
	<string name="register_get_code">获取验证码</string>
	<string name="codename">证件号</string>
	<string name="positive">身份证正面</string>
	<string name="opposite">身份证反面</string>
	<string name="commit">提交认证</string>  
	<string name="submit">提交</string>
	<string name="mytype">我的工种</string>
	<string name="uploadimg">上传图片</string>
	<string name="addcard">添加银行卡</string>
	<string name="realname">真实姓名</string>
	<string name="realname_hint">请输入持卡人姓名</string>
	<string name="IDnumber">身份证号</string>
	<string name="IDnumber_hint">请正确填写身份证号码</string>
	<string name="bank">开户银行</string>
	<string name="bank_hint">请选择开户银行</string>
	<string name="bankcardnum">银行卡号</string>
	<string name="bankcardnum_hint">请输入银行卡号</string>
	<string name="addcard_tip">请确保姓名、身份证、银行卡开户人为同一个人</string>
	<string name="addcard_comform">确认添加</string>
	<string name="mywallet">我的钱包</string>
	<string name="walletinfo">钱包明细</string>
	<string name="walletbalance">钱包余额</string>
	<string name="withdrawals">提   现</string>
	<string name="evaluate">我来评价</string>
	<string name="evaluatehe">给他打分</string>
	<string name="technology">专业技术</string>
	<string name="communicationservice">沟通服务</string>
	<string name="evaluate_hint">写点什么吧</string>
	<string name="account_renew">账号续费</string>
	<string name="account">金额(元)</string>
	<string name="account_hint">请输入续费金额</string>
	<string name="conform_renew">确认续费</string>
	<string name="hasbindcard">已绑定银行卡</string>
	<string name="search_tip">输入您想要查询的工种</string>
	<string name="home">首页</string>
	<string name="history">历史</string>
	<string name="settings">我</string>
	<string name="evaluatemax">评分最高</string>
	<string name="distancemin">距离最近</string>
	
	<string name="pull_to_load">下拉刷新</string>
	<string name="loading">加载中</string>
	<string name="release_to_load">松开刷新</string>
	
	<string name="check_net_setting">检查网络设置</string>
	    <string name="processing">请稍候...</string>
	
</resources>
